# api/swagger/swagger.yaml
@@ -17,10 +17,37 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+
 paths:
+  /authenticate:
+    x-swagger-router-controller: auth
+    post:
+      description: Authenticate a user in the system
+      operationId: authenticate
+      parameters:
+        - name: data
+          in: body
+          description: The user data
+          required: true
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/AuthorizationBody"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/AuthorizationResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /products:
     x-swagger-router-controller: products
     get:
+      security:
+        - Bearer: []
       description: Return 'Products'
       operationId: getProducts
       parameters:
@@ -51,6 +78,8 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
+      security:
+        - Bearer: []
       description: Create a 'Product'
       operationId: createProduct
       parameters:
@@ -75,6 +104,8 @@ paths:
   /products/{productId}:
     x-swagger-router-controller: products
     get:
+      security:
+        - Bearer: []
       description: Get a 'Product'
       operationId: getProduct
       parameters:
@@ -95,6 +126,8 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
+      security:
+        - Bearer: []
       description: Update a 'Product'
       operationId: updateProduct
       parameters:
@@ -122,6 +155,8 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
+      security:
+        - Bearer: []
       description: Delete a 'Product'
       operationId: deleteProduct
       parameters:
@@ -143,8 +178,29 @@ paths:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
+# Security definitions
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: authorization
+    in: header
 # complex objects have schema definitions
 definitions:
+  AuthorizationBody:
+    required:
+      - email
+      - password
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+  AuthorizationResponse:
+    required:
+      - token
+    properties:
+      token:
+        type: string
   Product:
     required:
       - name
